# customer_support_ai_environment

./: .env.example  .gitignore  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.ps1
env/: __init__.py  environment.py  grader.py  models.py  score_utils.py  tasks.py
server/: Dockerfile  app.py  customer_support_environment.py  requirements.txt
tests/: test_app.py  test_environment.py  test_inference.py
ui/: index.html
