[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-customer-support"
version = "1.0.0"
description = "A production-ready OpenEnv customer support environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "client", "models"]

[tool.setuptools.packages.find]
include = ["env", "server"]
